# TOML-Compiler

./: CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
include/: AST.hpp  FileHandler.hpp  Lexer.hpp  Logger.hpp  Parser.hpp  Token.hpp  Transpiler.hpp
src/: FileHandler.cpp  Lexer.cpp  Main.cpp  Parser.cpp  Transpiler.cpp
